# XtoW

./: .gitignore  COMPLIANCE  TODO  configure.ac
man/: Makefile.am  xtow.man
src/: Makefile.am  debug.c  debug.h  global.h  main.c  resource.h  resource.rc  win.c  wincursor.c  wincursor.h  winicons.c  winicons.h  winkeybd.c  winkeybd.h  winmessages.h  winvkmap.h  wndproc.c  wndproc.h
